--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -339,10 +339,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>"
+        "#@markdown <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> "
       ],
       "metadata": {
-        "id": "pA6j8DQSoPED"
+        "id": "8YtCj5pfoweW"
       },
       "execution_count": null,
       "outputs": []
@@ -361,7 +361,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use4.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "import os\n",
         "import shutil\n",
@@ -370,16 +370,14 @@
         "import sys\n",
         "import fileinput\n",
         "\n",
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"20\" alt=\"netdata\"/></center>\n",
-        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font>\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"20\" alt=\"netdata\"/></center>\n",
-        "#@markdown <left><font face='Trebuchet MS Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"]\n",
@@ -387,8 +385,7 @@
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"20\" alt=\"netdata\"/></center>\n",
-        "#@markdown <left><font face='Brush Script Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -595,6 +592,7 @@
         "  !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "BvRFxKjHPjeZ"
       },
       "execution_count": null,
@@ -854,11 +852,11 @@
         "print(opciones_validas)\n"
       ],
       "metadata": {
-        "id": "QOZMIEbFaeug",
-        "outputId": "d329dde8-6c84-453c-d1ed-8760e4e270a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QOZMIEbFaeug",
+        "outputId": "d329dde8-6c84-453c-d1ed-8760e4e270a7"
       },
       "execution_count": 6,
       "outputs": [
@@ -890,11 +888,11 @@
         "print(opciones_validas)\n"
       ],
       "metadata": {
-        "id": "Hv1PEggMa6Eo",
-        "outputId": "0d5fd255-dcce-4af3-e5eb-17ecc94fe4d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hv1PEggMa6Eo",
+        "outputId": "0d5fd255-dcce-4af3-e5eb-17ecc94fe4d3"
       },
       "execution_count": 8,
       "outputs": [
@@ -927,11 +925,11 @@
         "print(seleccion_multiple)\n"
       ],
       "metadata": {
-        "id": "hGtId6W6bNu_",
-        "outputId": "beee52b7-1968-4559-ef47-ef89462da836",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hGtId6W6bNu_",
+        "outputId": "beee52b7-1968-4559-ef47-ef89462da836"
       },
       "execution_count": 9,
       "outputs": [
@@ -966,11 +964,11 @@
         "print(seleccion_multiple)\n"
       ],
       "metadata": {
-        "id": "PmQOhApScaim",
-        "outputId": "f5f92c72-224d-4fcf-fdd2-aebf170a1192",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PmQOhApScaim",
+        "outputId": "f5f92c72-224d-4fcf-fdd2-aebf170a1192"
       },
       "execution_count": 10,
       "outputs": [
@@ -996,11 +994,11 @@
         "seleccion_multiple = input(f\"Seleccione las opciones que desee (ingrese el número correspondiente): {''.join([f'{i+1}. {opcion} (s/n) ' for i, opcion in enumerate(opciones)])}\").split()\n"
       ],
       "metadata": {
-        "id": "ZLGBOSwbcq1y",
-        "outputId": "613626b4-510f-45ec-de99-749abd22aecc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZLGBOSwbcq1y",
+        "outputId": "613626b4-510f-45ec-de99-749abd22aecc"
       },
       "execution_count": 12,
       "outputs": [
@@ -1034,11 +1032,11 @@
         "print(seleccion_multiple)\n"
       ],
       "metadata": {
-        "id": "HZw-TrXbdPYP",
-        "outputId": "d6303ca8-6304-4c51-c147-51c5991459be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HZw-TrXbdPYP",
+        "outputId": "d6303ca8-6304-4c51-c147-51c5991459be"
       },
       "execution_count": 18,
       "outputs": [
@@ -1077,8 +1075,6 @@
         "\n"
       ],
       "metadata": {
-        "id": "xet_ozK_eFGK",
-        "outputId": "c8d61f3a-8a07-4666-c52c-54849c1b3cab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17,
@@ -1086,7 +1082,9 @@
             "fb88d25cb1864d2aae33dd0af8645250",
             "c1e6d0ca2dc64927a7d5b94ce90ec214"
           ]
-        }
+        },
+        "id": "xet_ozK_eFGK",
+        "outputId": "c8d61f3a-8a07-4666-c52c-54849c1b3cab"
       },
       "execution_count": 23,
       "outputs": [
