--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -406,13 +406,13 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "    \n",
         "    clear_output()\n",
-        "  print('[1;96mInstalling SDZ ✓')\n",
+        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "if SDZ_Continue:\n",
         "  with capture.capture_output() as cap:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    clear_output()\n",
-        "  print('[1;96mPreparing SDZ Continue ✓')\n",
+        "  print('\u001b[1;96mPreparing SDZ Continue ✓')\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -584,7 +584,7 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "    clear_output()\n",
-        "print('[1;90mPreparing SDZ System ✓')\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
         "  !python launch.py $share\n",
@@ -592,7 +592,6 @@
         "  !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "BvRFxKjHPjeZ"
       },
       "execution_count": null,
