--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -339,20 +339,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> "
-      ],
-      "metadata": {
-        "id": "8YtCj5pfoweW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "8x59F7LPk5Xc"
       },
       "execution_count": null,
@@ -373,7 +363,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\"]\n",
+        "SDZ_Download_Model = \"V1.5.RL114\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -386,11 +376,11 @@
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
-        "\n",
+        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
+        "# SDZ_RunSDZ\n",
         "if not SDZ_Continue: \n",
         "  with capture.capture_output() as cap:\n",
         "    if os.path.exists(SDZ):\n",
@@ -414,9 +404,9 @@
         "    clear_output()\n",
         "  print('\u001b[1;96mPreparing SDZ Continue ✓')\n",
         "\n",
+        "# SDZ_Requirements\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "  ############# Requirements SDZ\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  !pip install triton==2.0.0.dev20221202.\n",
@@ -430,6 +420,7 @@
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
+        "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
@@ -488,6 +479,7 @@
         "    SDZ_Download_Model == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
+        "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -500,6 +492,7 @@
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
+        "# SDZ_ControlNet\n",
         "  if SDZ_ControlNet:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -518,6 +511,7 @@
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
         "    %cd ../../..\n",
         "\n",
+        "# SDZ_Upscalers\n",
         "  if SDZ_Upscaler:\n",
         "    os.chdir(SDZ_webui_path+'/'+'models')\n",
         "\n",
@@ -545,6 +539,7 @@
         "                link = line.strip()\n",
         "                os.system('wget --timestamping -P SwinIR {}'.format(link))\n",
         "\n",
+        "# SDZ_Training\n",
         "  if SDZ_Training == \"Kohya\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -592,6 +587,7 @@
         "  !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "BvRFxKjHPjeZ"
       },
       "execution_count": null,
