--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -514,6 +514,7 @@
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "    !git clone https://github.com/Gerschel/sd-web-ui-quickcss.git\n",
+        "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
@@ -612,7 +613,6 @@
         "  !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "BvRFxKjHPjeZ"
       },
       "execution_count": null,
