--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -68,7 +68,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -139,6 +139,9 @@
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.B\":\n",
+        "    !wget https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
