--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -63,6 +63,7 @@
         "from IPython.display import clear_output\n",
         "import sys\n",
         "import fileinput\n",
+        "import time\n",
         "\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
@@ -79,10 +80,21 @@
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
+        "SDZ_Loctunl = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "\n",
+        "def getLink(path):\n",
+        "  with open(path, 'r') as testwritefile:\n",
+        "    webui_link = testwritefile.read()\n",
+        "    webui_link = webui_link[webui_link.rfind(\"http\"):][:-1]\n",
+        "  return webui_link\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if not os.path.exists('/tools/node/bin/lt'):\n",
+        "    !npm install -g localtunnel\n",
         "\n",
         "# SDZ_RunSDZ\n",
         "if not SDZ_Continue: \n",
@@ -136,10 +148,6 @@
         "\n",
         "  elif SDZ_Download_Model == \"V2.1\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
-        "\n",
-        "  else:\n",
-        "    SDZ_Download_Model == \"\"\n",
-        "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
@@ -244,13 +252,27 @@
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
-        "  !python launch.py $share\n",
+        "  if SDZ_Loctunl == True:\n",
+        "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
+        "    time.sleep(3)\n",
+        "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
+        "    print(webui_link)\n",
+        "    !python launch.py $share\n",
+        "  else:\n",
+        "    !python launch.py $share\n",
         "elif SDZ_Version == \"V2.1\":\n",
-        "  !python launch.py $share SDZconfigV2"
+        "  if SDZ_Loctunl == True:\n",
+        "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
+        "    time.sleep(3)\n",
+        "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
+        "    print(webui_link)\n",
+        "    !python launch.py $share SDZconfigV2\n",
+        "  else:\n",
+        "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "9JQYaGHrKAv2"
+        "id": "NEZcwP9uS5sm"
       },
       "execution_count": null,
       "outputs": []
