--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -138,7 +138,7 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "    !wget https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
         "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
@@ -179,6 +179,7 @@
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
+        "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../../..\n",
         "\n",
         "# SDZ_Upscalers\n",
