--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -238,6 +238,9 @@
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "    %cd models/VAE\n",
+        "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
+        "    %cd ../..\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
@@ -265,6 +268,7 @@
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
+        "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../../..\n",
         "\n",
         "# SDZ_Upscalers\n",
@@ -373,6 +377,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Old SDZ"
+      ],
+      "metadata": {
+        "id": "rti6lcHTfMTz"
+      }
     },
     {
       "cell_type": "code",
