--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -248,6 +248,9 @@
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
+        "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    !git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
