--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -251,6 +251,7 @@
         "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
         "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
         "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
