--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -54,6 +54,33 @@
     {
       "cell_type": "code",
       "source": [
+        "!conda install xformers"
+      ],
+      "metadata": {
+        "id": "wvs70CCjb4W3",
+        "outputId": "023761d8-ee24-447c-badb-dacf76d52c90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting package metadata (current_repodata.json): - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\bdone\n",
+            "Solving environment: \\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n",
+            "\n",
+            "# All requested packages already installed.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use4.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
@@ -68,7 +95,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\"]\n",
+        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -76,14 +103,14 @@
         "SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"]\n",
-        "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
-        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
+        "SDZ_Args = \"--reinstall-xformers\" # @param {type:\"string\"}\n",
+        "SDZ_Extensions = True #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
-        "SDZ_Loctunl = False #@param {type:\"boolean\"}\n",
+        "SDZ_Loctunl = True #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
@@ -306,6 +333,13 @@
         "# SDZ_Training\n",
         "  if SDZ_Training == \"Kohya\":\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
         "    %cd ..\n",
@@ -322,7 +356,6 @@
         "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
         "      !bash ./py310.sh -b -f -p /usr/local\n",
         "      !python -m ipykernel install --name \"py310\" --user\n",
-        "      !conda install -c \"xformers/label/dev\" xformers -y\n",
         "      !pip install open-clip-torch\n",
         "      !pip install triton\n",
         "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
@@ -377,10 +410,47 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "p0WPkwREmtD3"
+        "id": "p0WPkwREmtD3",
+        "outputId": "71762762-e3d9-4cf7-85b7-484d54926361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;96mPreparing SDZ Continue ✓\n",
+            "\u001b[1;90mPreparing SDZ System ✓\n",
+            "Python 3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]\n",
+            "Commit hash: 0cc0ee1bcb4c24a8c9715f66cede06601bfc00c8\n",
+            "Installing xformers\n",
+            "Installing requirements for Web UI\n",
+            "Installing requirements for kohya sd-scripts\n",
+            "\n",
+            "Launching Web UI with arguments: --share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --ckpt= --ckpt-dir=\n",
+            "2023-03-06 19:42:16.456967: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "/usr/local/lib/python3.10/site-packages/pytorch_lightning/utilities/distributed.py:258: LightningDeprecationWarning: `pytorch_lightning.utilities.distributed.rank_zero_only` has been deprecated in v1.8.1 and will be removed in v2.0.0. You can import it from `pytorch_lightning.utilities` instead.\n",
+            "  rank_zero_deprecation(\n",
+            "Checkpoint in --ckpt argument not found (Possible it was moved to /content/stable-diffusion-webui/models/Stable-diffusion: \n",
+            "/usr/local/lib/python3.10/site-packages/pytorch_lightning/utilities/distributed.py:258: LightningDeprecationWarning: `pytorch_lightning.utilities.distributed.rank_zero_only` has been deprecated in v1.8.1 and will be removed in v2.0.0. You can import it from `pytorch_lightning.utilities` instead.\n",
+            "  rank_zero_deprecation(\n",
+            "Checkpoint v1-5-fp16.ckpt [a2a802b2] not found; loading fallback content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors [6ce0161689]\n",
+            "Loading weights [6ce0161689] from /content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors\n",
+            "Creating model from config: /content/stable-diffusion-webui/configs/v1-inference.yaml\n",
+            "LatentDiffusion: Running in eps-prediction mode\n",
+            "DiffusionWrapper has 859.52 M params.\n",
+            "Running on local URL:  http://127.0.0.1:7860\n",
+            "Running on public URL: https://099ac21f-a5aa-4630.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n",
+            "Start process:  /usr/local/bin/python -u /content/stable-diffusion-webui/extensions/kohya-sd-scripts-webui/kohya_ss/train_network.py --pretrained_model_name_or_path /content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors --train_data_dir /content/a1 --shuffle_caption --caption_extension .caption --flip_aug --resolution 512 --enable_bucket --min_bucket_reso 256 --max_bucket_reso 1024 --dataset_repeats 1 --output_dir /content/sample_data --output_name reikganz --save_precision fp16 --save_every_n_epochs 5 --train_batch_size 1 --xformers --max_train_steps 1600 --max_data_loader_n_workers 8 --gradient_checkpointing --gradient_accumulation_steps 1 --mixed_precision no --clip_skip 2 --prior_loss_weight 1.0 --use_8bit_adam --learning_rate 0.0001 --lr_scheduler constant --save_model_as safetensors --network_module networks.lora --network_dim 16 --network_alpha 1.0\n",
+            "Interrupted with signal 2 in <frame at 0x55845c20f760, file '/content/stable-diffusion-webui/webui.py', line 173, code wait_on_server>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
