--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -252,6 +252,7 @@
         "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
         "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
         "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    !git clone https://github.com/hnmr293/posex.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
@@ -388,47 +389,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "p0WPkwREmtD3",
-        "outputId": "71762762-e3d9-4cf7-85b7-484d54926361",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;96mPreparing SDZ Continue ✓\n",
-            "\u001b[1;90mPreparing SDZ System ✓\n",
-            "Python 3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]\n",
-            "Commit hash: 0cc0ee1bcb4c24a8c9715f66cede06601bfc00c8\n",
-            "Installing xformers\n",
-            "Installing requirements for Web UI\n",
-            "Installing requirements for kohya sd-scripts\n",
-            "\n",
-            "Launching Web UI with arguments: --share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --ckpt= --ckpt-dir=\n",
-            "2023-03-06 19:42:16.456967: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "/usr/local/lib/python3.10/site-packages/pytorch_lightning/utilities/distributed.py:258: LightningDeprecationWarning: `pytorch_lightning.utilities.distributed.rank_zero_only` has been deprecated in v1.8.1 and will be removed in v2.0.0. You can import it from `pytorch_lightning.utilities` instead.\n",
-            "  rank_zero_deprecation(\n",
-            "Checkpoint in --ckpt argument not found (Possible it was moved to /content/stable-diffusion-webui/models/Stable-diffusion: \n",
-            "/usr/local/lib/python3.10/site-packages/pytorch_lightning/utilities/distributed.py:258: LightningDeprecationWarning: `pytorch_lightning.utilities.distributed.rank_zero_only` has been deprecated in v1.8.1 and will be removed in v2.0.0. You can import it from `pytorch_lightning.utilities` instead.\n",
-            "  rank_zero_deprecation(\n",
-            "Checkpoint v1-5-fp16.ckpt [a2a802b2] not found; loading fallback content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors [6ce0161689]\n",
-            "Loading weights [6ce0161689] from /content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors\n",
-            "Creating model from config: /content/stable-diffusion-webui/configs/v1-inference.yaml\n",
-            "LatentDiffusion: Running in eps-prediction mode\n",
-            "DiffusionWrapper has 859.52 M params.\n",
-            "Running on local URL:  http://127.0.0.1:7860\n",
-            "Running on public URL: https://099ac21f-a5aa-4630.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n",
-            "Start process:  /usr/local/bin/python -u /content/stable-diffusion-webui/extensions/kohya-sd-scripts-webui/kohya_ss/train_network.py --pretrained_model_name_or_path /content/stable-diffusion-webui/models/Stable-diffusion/v15B.safetensors --train_data_dir /content/a1 --shuffle_caption --caption_extension .caption --flip_aug --resolution 512 --enable_bucket --min_bucket_reso 256 --max_bucket_reso 1024 --dataset_repeats 1 --output_dir /content/sample_data --output_name reikganz --save_precision fp16 --save_every_n_epochs 5 --train_batch_size 1 --xformers --max_train_steps 1600 --max_data_loader_n_workers 8 --gradient_checkpointing --gradient_accumulation_steps 1 --mixed_precision no --clip_skip 2 --prior_loss_weight 1.0 --use_8bit_adam --learning_rate 0.0001 --lr_scheduler constant --save_model_as safetensors --network_module networks.lora --network_dim 16 --network_alpha 1.0\n",
-            "Interrupted with signal 2 in <frame at 0x55845c20f760, file '/content/stable-diffusion-webui/webui.py', line 173, code wait_on_server>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
