--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -325,9 +325,17 @@
         "\n",
         "  elif SDZ_Training == \"New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
+        "    !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
         "    \n",
         "  elif SDZ_Training == \"Old_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
