--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -75,7 +75,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Training = \"\" #@param [\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"]\n",
+        "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
@@ -314,7 +314,7 @@
         "                os.system('wget --timestamping -P SwinIR {}'.format(link))\n",
         "\n",
         "# SDZ_Training\n",
-        "  if SDZ_Training == \"Kohya\":\n",
+        "  if SDZ_Training == \"New_Dreambooth - Kohya\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
         "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
@@ -325,22 +325,10 @@
         "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
-        "    %cd ..\n",
-        "\n",
-        "  elif SDZ_Training == \"New_Dreambooth\":\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
-        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
-        "      !bash ./py310.sh -b -f -p /usr/local\n",
-        "      !python -m ipykernel install --name \"py310\" --user\n",
-        "      !pip install open-clip-torch\n",
-        "      !pip install triton\n",
-        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "    !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
-        "    \n",
+        "\n",
         "  elif SDZ_Training == \"Old_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
@@ -400,7 +388,6 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
