--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -81,7 +81,6 @@
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
-        "SDZ_Loctunl = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -241,8 +240,10 @@
         "    %cd models/VAE\n",
         "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
         "    %cd ..\n",
-        "    %cd LORA\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/16576?type=Model&format=SafeTensor -O epiNoiseoffset_v2.safetensors\n",
+        "    if not os.path.exists('Lora'):\n",
+        "        os.makedirs('Lora')\n",
+        "    %cd Lora\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/16576\n",
         "    %cd ../..\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
@@ -369,22 +370,17 @@
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
-        "  if SDZ_Loctunl == True:\n",
         "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
         "    time.sleep(3)\n",
         "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
         "    print(webui_link)\n",
         "    !python launch.py $share\n",
-        "  else:\n",
-        "    !python launch.py $share\n",
+        "\n",
         "elif SDZ_Version == \"V2.1\":\n",
-        "  if SDZ_Loctunl == True:\n",
         "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
         "    time.sleep(3)\n",
         "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
         "    print(webui_link)\n",
-        "    !python launch.py $share SDZconfigV2\n",
-        "  else:\n",
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
